--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -34,6 +34,10 @@
      .bar{
         position: fixed;
     }
+
+    .bar2{
+        position: fixed;
+    }
     
     
     .hamburger{
@@ -59,6 +63,14 @@
     .bar{
         top: 3px;
         background: #DF3876;
+        width: 100%;
+        height: 4px;
+        transition: all .3s ease-in;
+    }
+
+    .bar2{
+        top: 3px;
+        background: #3f56fb;
         width: 100%;
         height: 4px;
         transition: all .3s ease-in;
